// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Another Button with some emoji 1`] = `
<Styled(button)
  onClick={[Function]}
>
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯
  </span>
</Styled(button)>
`;

exports[`Storyshots Another Button with text 1`] = `
<Styled(button)
  onClick={[Function]}
>
  Hello Button
</Styled(button)>
`;

exports[`Storyshots Button with some emoji 1`] = `
<Styled(button)
  onClick={[Function]}
>
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯
  </span>
</Styled(button)>
`;

exports[`Storyshots Button with text 1`] = `
<Styled(button)
  onClick={[Function]}
>
  Hello Button
</Styled(button)>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<ForwardRef>
  <ForwardRef>
    Welcome to storybook
  </ForwardRef>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <ForwardRef>
      src/stories
    </ForwardRef>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample 
    <ForwardRef
      onClick={[Function]}
    >
      stories
    </ForwardRef>
     for a component called
     
    <ForwardRef>
      Button
    </ForwardRef>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <ForwardRef>
      Button
    </ForwardRef>
     stories located at
     
    <ForwardRef>
      src/stories/index.js
    </ForwardRef>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <ForwardRef
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </ForwardRef>
     
    section in our documentation.
  </p>
  <ForwardRef>
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <ForwardRef>
      .storybook/webpack.config.js
    </ForwardRef>
     to add webpack loaders and plugins you are using in this project.
  </ForwardRef>
</ForwardRef>
`;
